force-app/main/default/objects/Case/fields/ABN_Number__c.field-meta.xml
<CustomField>
    <fullName>ABN_Number__c</fullName>
    <description>QCC: Represents the ABN</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ABN Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>