force-app/main/default/objects/Case/fields/ABN_Tax_Reference__c.field-meta.xml
<CustomField>
    <fullName>ABN_Tax_Reference__c</fullName>
    <description>QAC - This field is used to Store ABN number which is coming from Agency Account</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ABN / Tax Reference</label>
    <length>15</length>
    <type>Text</type>
</CustomField>