force-app/main/default/objects/Case/fields/Account_Country__c.field-meta.xml
<CustomField>
    <fullName>Account_Country__c</fullName>
    <description>QAC -  This field will populate case&apos;s account Country code.</description>
    <formula>Account.BillingCountry</formula>
    <label>Account Country</label>
    <type>Text</type>
</CustomField>