force-app/main/default/objects/Case/fields/Account_Owner_asper_RelatedAcct__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_asper_RelatedAcct__c</fullName>
    <formula>TRIM(Account.Owner.FirstName &amp; &quot; &quot; &amp; Account.Owner.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner</label>
    <type>Text</type>
</CustomField>