force-app/main/default/objects/Case/fields/Account_Skill_Group__c.field-meta.xml
<CustomField>
    <fullName>Account_Skill_Group__c</fullName>
    <description>To populate Account Skill Group on SR Approval Process</description>
    <formula>TEXT(Account.Account_Skill_Group__c)</formula>
    <label>Account Skill Group</label>
    <type>Text</type>
</CustomField>