force-app/main/default/objects/Case/fields/Acknowledgement_Sent__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgement_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>QCC: Acknowledgement Letter sent or not</description>
    <label>Acknowledgement Sent?</label>
    <type>Checkbox</type>
</CustomField>