force-app/main/default/objects/Case/fields/ACM_Value__c.field-meta.xml
<CustomField>
    <fullName>ACM_Value__c</fullName>
    <formula>ADM_Value__c  -  Qantas_Handling_Fee__c  -  Auditor_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACM Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>