force-app/main/default/objects/Case/fields/Actual_Arrival_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Actual_Arrival_Date_Time__c</fullName>
    <description>QCC: Used to store the actual arrival date/time for the case specific flight</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>CCC: Format DD/MM/YYYY HH:MM:SS</inlineHelpText>
    <label>Actual Arrival Date/Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>