force-app/main/default/objects/Case/fields/Actual_Departure_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Actual_Departure_Date_Time__c</fullName>
    <description>QCC: Used to store the actual departure date/time for the case specific flight</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>CCC: Format DD/MM/YYYY HH:MM:SS</inlineHelpText>
    <label>Actual Departure Date/Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>