force-app/main/default/objects/Case/fields/Actual_Emergency_Expense__c.field-meta.xml
<CustomField>
    <fullName>Actual_Emergency_Expense__c</fullName>
    <description>QCC: How much the consultant will actually reimburse the customer</description>
    <label>Actual Emergency Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>