force-app/main/default/objects/Case/fields/Additional_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Additional_Requirements__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Additional Requirements</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>