force-app/main/default/objects/Case/fields/Address_on_Name_Tag__c.field-meta.xml
<CustomField>
    <fullName>Address_on_Name_Tag__c</fullName>
    <description>QCC: Address on Name Tag</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Address on Name Tag</label>
    <type>TextArea</type>
</CustomField>