force-app/main/default/objects/Case/fields/ADM_Value__c.field-meta.xml
<CustomField>
    <fullName>ADM_Value__c</fullName>
    <label>ADM Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>