force-app/main/default/objects/Case/fields/Age_of_Bag__c.field-meta.xml
<CustomField>
    <fullName>Age_of_Bag__c</fullName>
    <description>QCC: Created to store bag age values</description>
    <inlineHelpText>CCC: Age of bag in years</inlineHelpText>
    <label>Age of Bag</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>