force-app/main/default/objects/Case/fields/Agency_Code__c.field-meta.xml
<CustomField>
    <fullName>Agency_Code__c</fullName>
    <description>Account&apos;s Qantas_Industry_Centre_Identifier__c</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Account&apos;s Qantas Industry Centre Identifier</inlineHelpText>
    <label>Agency Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>