force-app/main/default/objects/Case/fields/Agency_GDS_Access__c.field-meta.xml
<CustomField>
    <fullName>Agency_GDS_Access__c</fullName>
    <inlineHelpText>Sell, Ticket – Agent has ability to sell and ticket only
Update, Redistribute, Sell, Ticket – Agent has the ability to mark up fares, redistribute to other PCC’s in their agency, sell and ticket</inlineHelpText>
    <label>Agency GDS Access</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sell, Ticket</fullName>
            </value>
            <value>
                <fullName>Update, Redistribute, Sell, Ticket</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>