force-app/main/default/objects/Case/fields/Agency_Type__c.field-meta.xml
<CustomField>
    <fullName>Agency_Type__c</fullName>
    <label>Agency Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IATA</fullName>
            </value>
            <value>
                <fullName>TIDS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>