force-app/main/default/objects/Case/fields/Aircraft_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Aircraft_Type_Code__c</fullName>
    <description>Aircraft Type Code</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Aircraft Type Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>