force-app/main/default/objects/Case/fields/Airline__c.field-meta.xml
<CustomField>
    <fullName>Airline__c</fullName>
    <description>QCC: Used to track/store the flight airline</description>
    <label>Airline</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aer Lingus</fullName>
            </value>
            <value>
                <fullName>Aeropelican</fullName>
            </value>
            <value>
                <fullName>Air Asia X</fullName>
            </value>
            <value>
                <fullName>Air Berlin</fullName>
            </value>
            <value>
                <fullName>Aircalin</fullName>
            </value>
            <value>
                <fullName>Air Canada</fullName>
            </value>
            <value>
                <fullName>Air China</fullName>
            </value>
            <value>
                <fullName>Air India</fullName>
            </value>
            <value>
                <fullName>Airlines PNG</fullName>
            </value>
            <value>
                <fullName>Air Mauritius</fullName>
            </value>
            <value>
                <fullName>Air New Zealand</fullName>
            </value>
            <value>
                <fullName>Airnorth</fullName>
            </value>
            <value>
                <fullName>Air Nuigini</fullName>
            </value>
            <value>
                <fullName>Air Pacific</fullName>
            </value>
            <value>
                <fullName>Air Vanuatu</fullName>
            </value>
            <value>
                <fullName>Alaska Airlines</fullName>
            </value>
            <value>
                <fullName>Alitalia</fullName>
            </value>
            <value>
                <fullName>All Nippon Airways</fullName>
            </value>
            <value>
                <fullName>American Airline</fullName>
            </value>
            <value>
                <fullName>American Airlines</fullName>
            </value>
            <value>
                <fullName>Asiana</fullName>
            </value>
            <value>
                <fullName>Beijing Capital Airlines</fullName>
            </value>
            <value>
                <fullName>Brindabella Airlines</fullName>
            </value>
            <value>
                <fullName>British Airways</fullName>
            </value>
            <value>
                <fullName>Cathay Pacific</fullName>
            </value>
            <value>
                <fullName>Cebu Pacific</fullName>
            </value>
            <value>
                <fullName>China Airlines</fullName>
            </value>
            <value>
                <fullName>China Eastern</fullName>
            </value>
            <value>
                <fullName>China Southern Airlines</fullName>
            </value>
            <value>
                <fullName>Delta Airlines</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>