force-app/main/default/objects/Case/fields/Airline_Level__c.field-meta.xml
<CustomField>
    <fullName>Airline_Level__c</fullName>
    <formula>Account.Airline_Level__c</formula>
    <label>Airline Level</label>
    <type>Text</type>
</CustomField>