force-app/main/default/objects/Case/fields/Airlines__c.field-meta.xml
<CustomField>
    <fullName>Airlines__c</fullName>
    <label>Airlines</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Qantas</fullName>
            </value>
            <value>
                <fullName>Jetstar</fullName>
            </value>
            <value>
                <fullName>Emirates</fullName>
            </value>
            <value>
                <fullName>China Eastern</fullName>
            </value>
            <value>
                <fullName>American Airlines</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>