force-app/main/default/objects/Case/fields/AM_s_Manager__c.field-meta.xml
<CustomField>
    <fullName>AM_s_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used for process builder to populate the field with the Account Owners Manager ID.

Process builder name:
Account Handover - Update Case with Account Owners Manager</description>
    <label>Replicate User License of</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>