force-app/main/default/objects/Case/fields/Amount_Charged_Original__c.field-meta.xml
<CustomField>
    <fullName>Amount_Charged_Original__c</fullName>
    <label>Amount Charged.Original</label>
    <summarizedField>CASS_Billing__c.Amount_Charged__c</summarizedField>
    <summaryFilterItems>
        <field>CASS_Billing__c.Charges__c</field>
        <operation>equals</operation>
        <value>Original</value>
    </summaryFilterItems>
    <summaryForeignKey>CASS_Billing__c.CASS_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>