force-app/main/default/objects/Case/fields/Amount_of_Days__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Days__c</fullName>
    <description>Returns the number of days between Created Date and Expected Completion Date</description>
    <formula>Expected_Completion_Date__c - DATEVALUE ( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount of Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>