force-app/main/default/objects/Case/fields/Approval_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Approval_Date_Time__c</fullName>
    <description>To capture the date/time of the latest approval</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Approval Date/Time</label>
    <type>DateTime</type>
</CustomField>