force-app/main/default/objects/Case/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Incomplete ticketing authority documents</fullName>
            </value>
            <value>
                <fullName>Travel agent unknown/insufficient information</fullName>
            </value>
            <value>
                <fullName>Not participating in BSP region</fullName>
            </value>
            <value>
                <fullName>Not expanding agent footprint in the region</fullName>
            </value>
            <value>
                <fullName>Ticketing Rejected</fullName>
            </value>
            <value>
                <fullName>Reject</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>