force-app/main/default/objects/Case/fields/Approval_steps__c.field-meta.xml
<CustomField>
    <fullName>Approval_steps__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Freight approval process for claims uses this to count the iteration and steps.</description>
    <label>Approval steps</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>