force-app/main/default/objects/Case/fields/Approve__c.field-meta.xml
<CustomField>
    <fullName>Approve__c</fullName>
    <label>Fulfilled?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>