force-app/main/default/objects/Case/fields/Arrival_Airport__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Airport__c</fullName>
    <description>QCC: Used to track/store the arrival airport for a case</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Arrival Airport</label>
    <length>50</length>
    <type>Text</type>
</CustomField>