force-app/main/default/objects/Case/fields/Arrival_Airport_Code__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Airport_Code__c</fullName>
    <description>QCC: Storing arrival airport code from CAP</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Arrival Airport Code</label>
    <length>128</length>
    <type>Text</type>
</CustomField>