force-app/main/default/objects/Case/fields/Arrival_City__c.field-meta.xml
<CustomField>
    <fullName>Arrival_City__c</fullName>
    <description>QCC: Used to store/show the segment arrival city</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Arrival City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>