force-app/main/default/objects/Case/fields/Arrival_Country__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Country__c</fullName>
    <description>QCC: Storing Arrival Country from CAP</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Arrival Country</label>
    <length>128</length>
    <type>Text</type>
</CustomField>