force-app/main/default/objects/Case/fields/Arrival_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Date_Time__c</fullName>
    <description>QCC: Used to store the case specific flight scheduled flight arrival date/time</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>CCC: Format DD/MM/YYYY HH:MM:SS</inlineHelpText>
    <label>Arrival Date/Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>