force-app/main/default/objects/Case/fields/Arrival_DateTime_Backend__c.field-meta.xml
<CustomField>
    <fullName>Arrival_DateTime_Backend__c</fullName>
    <description>QCC: Back end Field( Used for time based action for calculating emergency Expense) Stores Actual Arrival Date time value if this is blank it stores Arrival Date time</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Arrival DateTime(Backend)</label>
    <type>DateTime</type>
</CustomField>