force-app/main/default/objects/Case/fields/Arrival_Delay_Time__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Delay_Time__c</fullName>
    <description>QCC: Used to store the arrival delay time for the case specific flight</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Arrival Delay Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>