force-app/main/default/objects/Case/fields/Arrival_Delay_Time_Mins__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Delay_Time_Mins__c</fullName>
    <description>Added for Insurance Letters in &apos;QCC Insurance Letter Layout&apos;  Case  Page Layout</description>
    <formula>MOD(FLOOR((DATETIMEVALUE( 
/* Year Logic */
MID(Actual_Arrival_Date_Time__c, 7,4) +&apos;-&apos;+ 
/* Month Logic */ 
MID(Actual_Arrival_Date_Time__c, 
  FIND(&quot;/&quot;,Actual_Arrival_Date_Time__c) + 1,
    FIND(&quot;/&quot;,Actual_Arrival_Date_Time__c, FIND(&quot;/&quot;,Actual_Arrival_Date_Time__c) + 1) -
    FIND(&quot;/&quot;,Actual_Arrival_Date_Time__c) - 1
)+&apos;-&apos;+        
/* Day Logic */
LEFT(Actual_Arrival_Date_Time__c, 
  FIND(&quot;/&quot;,Actual_Arrival_Date_Time__c) - 1) +&apos; &apos;+
/* Time Logic */
    RIGHT(Actual_Arrival_Date_Time__c, 8)
)  -  DATETIMEVALUE( 
/* Year Logic */
MID(Arrival_Date_Time__c, 7,4) +&apos;-&apos;+ 
/* Month Logic */ 
MID(Arrival_Date_Time__c, 
  FIND(&quot;/&quot;,Arrival_Date_Time__c) + 1,
    FIND(&quot;/&quot;,Arrival_Date_Time__c, FIND(&quot;/&quot;,Arrival_Date_Time__c) + 1) -
    FIND(&quot;/&quot;,Arrival_Date_Time__c) - 1
)+&apos;-&apos;+        
/* Day Logic */
LEFT(Arrival_Date_Time__c, 
  FIND(&quot;/&quot;,Arrival_Date_Time__c) - 1) +&apos; &apos;+
/* Time Logic */
    RIGHT(Arrival_Date_Time__c, 8)
))*1440),60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Arrival Delay Time (Mins)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>