force-app/main/default/objects/Case/fields/Arrival_UTC_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Arrival_UTC_Date_Time__c</fullName>
    <description>QCC: Storing arrival UTC date time</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Arrival UTC Date/Time</label>
    <type>DateTime</type>
</CustomField>