force-app/main/default/objects/Case/fields/Article_Journey__c.field-meta.xml
<CustomField>
    <fullName>Article_Journey__c</fullName>
    <label>Article Journey</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Request</fullName>
                <default>true</default>
                <label>Request</label>
            </value>
            <value>
                <fullName>Prioritise &amp; Assign</fullName>
            </value>
            <value>
                <fullName>Article Curation</fullName>
            </value>
            <value>
                <fullName>QA &amp; Approval</fullName>
            </value>
            <value>
                <fullName>Publish &amp; Communicate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>