force-app/main/default/objects/Case/fields/Assessed_Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>Assessed_Purchase_Price__c</fullName>
    <description>Assessed Purchase Price</description>
    <inlineHelpText>CCC: How much Qantas believe the bag is worth after assessment</inlineHelpText>
    <label>Assessed Purchase Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>