force-app/main/default/objects/Case/fields/Assessor_Name__c.field-meta.xml
<CustomField>
    <fullName>Assessor_Name__c</fullName>
    <description>QCC: Name of assessor for Baggae Damage Incident.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Assessor Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>