force-app/main/default/objects/Case/fields/Assign_to_QBR_Level__c.field-meta.xml
<CustomField>
    <fullName>Assign_to_QBR_Level__c</fullName>
    <defaultValue>&apos;3&apos;</defaultValue>
    <label>Assign to QBR Level</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Handover_to_QBR__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>