force-app/main/default/objects/Case/fields/Assign_using_active_assignment_rules__c.field-meta.xml
<CustomField>
    <fullName>Assign_using_active_assignment_rules__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether to assign cases using active assignment rules</description>
    <inlineHelpText>CCC: Tick this box to use queue allocation</inlineHelpText>
    <label>Assign using active assignment rules</label>
    <type>Checkbox</type>
</CustomField>