force-app/main/default/objects/Case/fields/Auditor_Fee__c.field-meta.xml
<CustomField>
    <fullName>Auditor_Fee__c</fullName>
    <label>Auditor Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>