force-app/main/default/objects/Case/fields/Authority_Number__c.field-meta.xml
<CustomField>
    <fullName>Authority_Number__c</fullName>
    <description>Auto generated for all Closed - approved QIC cases</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Auto generated for approved cases</inlineHelpText>
    <label>Authority Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>