force-app/main/default/objects/Case/fields/Authority_Status__c.field-meta.xml
<CustomField>
    <fullName>Authority_Status__c</fullName>
    <defaultValue>&quot;Not Applicable&quot;</defaultValue>
    <label>Authority Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
                <default>true</default>
                <label>Not Applicable</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Auto Approved</fullName>
            </value>
            <value>
                <fullName>Auto-Approved</fullName>
                <isActive>false</isActive>
                <label>Auto-Approved</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>