force-app/main/default/objects/Case/fields/Auto_Account_Review_Case_Date__c.field-meta.xml
<CustomField>
    <fullName>Auto_Account_Review_Case_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Auto Account Review Case Date</label>
    <type>Date</type>
</CustomField>