force-app/main/default/objects/Case/fields/Auto_Close_on_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Auto_Close_on_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>QCC: Close Case when New Email is sent</description>
    <label>Auto Close on Email Sent</label>
    <type>Checkbox</type>
</CustomField>