force-app/main/default/objects/Case/fields/Auto_Create_Case__c.field-meta.xml
<CustomField>
    <fullName>Auto_Create_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Create Case?</label>
    <type>Checkbox</type>
</CustomField>