force-app/main/default/objects/Case/fields/Baggage_Assessment_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Baggage_Assessment_Outcome__c</fullName>
    <description>Added for Insurance Letters in &apos;QCC Insurance Letter Layout&apos;  Case  Page Layout</description>
    <label>Baggage Assessment Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Emergency Expenses</fullName>
            </value>
            <value>
                <fullName>Financial Settlement</fullName>
            </value>
            <value>
                <fullName>Incomplete Claim Form</fullName>
            </value>
            <value>
                <fullName>Out of Timeframe</fullName>
            </value>
            <value>
                <fullName>QF not Liable</fullName>
            </value>
            <value>
                <fullName>Repair</fullName>
            </value>
            <value>
                <fullName>Replacement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>