force-app/main/default/objects/Case/fields/Baggage_File_Reference__c.field-meta.xml
<CustomField>
    <fullName>Baggage_File_Reference__c</fullName>
    <description>QCC: Created to show/store Baggage File Reference (if insurance related to baggage).</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>CCC: Not required unless case related to Baggage. Format e.g. DPRSYDQF12345</inlineHelpText>
    <label>Baggage File Reference</label>
    <length>200</length>
    <type>Text</type>
</CustomField>