force-app/main/default/objects/Case/fields/Baggage_Receipt_Number__c.field-meta.xml
<CustomField>
    <fullName>Baggage_Receipt_Number__c</fullName>
    <description>QCC Baggage Receipt Number</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the baggage receipt number provided by the airline.</inlineHelpText>
    <label>Baggage Receipt Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>