force-app/main/default/objects/Case/fields/Billing_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Due_Date__c</fullName>
    <description>CRM-3692 : Service Payment Object Payment Due Date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment Due Date</label>
    <type>DateTime</type>
</CustomField>