force-app/main/default/objects/Case/fields/Billing_Status__c.field-meta.xml
<CustomField>
    <fullName>Billing_Status__c</fullName>
    <description>CRM-3692 : Service Payment Object Payment Status</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment Status</label>
    <length>150</length>
    <type>Text</type>
</CustomField>