force-app/main/default/objects/Case/fields/Board_Of_Member__c.field-meta.xml
<CustomField>
    <fullName>Board_Of_Member__c</fullName>
    <description>This field is used to identify Qantas Board members and their respective beneficiaries.</description>
    <formula>IF(Contact.Board_Of_Member__c &lt;&gt; False,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Qantas Board Member / Beneficiary</label>
    <type>Checkbox</type>
</CustomField>