force-app/main/default/objects/Case/fields/Booking_Change_Fee__c.field-meta.xml
<CustomField>
    <fullName>Booking_Change_Fee__c</fullName>
    <description>QCC: Used to store the change fee for the case specific ticket</description>
    <label>Change Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>