force-app/main/default/objects/Case/fields/Booking_PNR__c.field-meta.xml
<CustomField>
    <fullName>Booking_PNR__c</fullName>
    <description>QCC: Created to show/store Booking Reference # (PNR).</description>
    <encryptionScheme>None</encryptionScheme>
    <label>PNR</label>
    <length>20</length>
    <type>Text</type>
</CustomField>