force-app/main/default/objects/Case/fields/Business_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Business_Phone_Number__c</fullName>
    <description>Phone Number from Corporate Scheme Record</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Business Phone Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>