force-app/main/default/objects/Case/fields/Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Type__c</fullName>
    <label>Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ABF</fullName>
                <isActive>false</isActive>
                <label>ABF</label>
            </value>
            <value>
                <fullName>Clerical</fullName>
            </value>
            <value>
                <fullName>CST/IT</fullName>
            </value>
            <value>
                <fullName>CSU</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>FPO</fullName>
            </value>
            <value>
                <fullName>Freighter</fullName>
            </value>
            <value>
                <fullName>Jets</fullName>
            </value>
            <value>
                <fullName>Load Control</fullName>
            </value>
            <value>
                <fullName>Overseas Port</fullName>
            </value>
            <value>
                <fullName>Ramp</fullName>
            </value>
            <value>
                <fullName>Screening</fullName>
            </value>
            <value>
                <fullName>Terminal</fullName>
                <isActive>false</isActive>
                <label>Terminal</label>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
            <value>
                <fullName>Weather</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>