force-app/main/default/objects/Case/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Freight</fullName>
            </value>
            <value>
                <fullName>Loyalty</fullName>
            </value>
            <value>
                <fullName>Customer Connect</fullName>
            </value>
            <value>
                <fullName>Sales &amp; Distribution</fullName>
            </value>
            <value>
                <fullName>C &amp; CR Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>