force-app/main/default/objects/Case/fields/Business_Unit_Case_Creater__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Case_Creater__c</fullName>
    <description>To assist the business unit of the case creator</description>
    <formula>CreatedBy.Business_Unit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Unit</label>
    <type>Text</type>
</CustomField>