force-app/main/default/objects/Case/fields/Cabin_Class__c.field-meta.xml
<CustomField>
    <fullName>Cabin_Class__c</fullName>
    <description>QCC: Created to show/store Customer Cabin Class.</description>
    <inlineHelpText>CCC: Required for queuing prioritisation</inlineHelpText>
    <label>Cabin Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBC</fullName>
            </value>
            <value>
                <fullName>First</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Premium Economy</fullName>
            </value>
            <value>
                <fullName>Economy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>